--- a/AuditSystem/index.html
+++ b/AuditSystem/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>audit</title>
+    <!--用户放大缩小-->
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <title>内部系统</title>
   </head>
   <body>
     <div id="app"></div>
